--- a/jboss-standalone/aws-build_vm.yml
+++ b/jboss-standalone/aws-build_vm.yml
@@ -6,8 +6,8 @@
 
  vars:
    region:   us-east-1
-   ami:      ami-81cf0c97
-   keypair:  "{{ ec2_keypair_name | default('you need to define this') }}"
+   ami:      ami-9e0ea788
+   keypair:  "{{ ec2_keypair_name | default('redhat demo') }}"
    set_dns:  False
    count:    1
    tags:
@@ -21,7 +21,7 @@
        module: ec2
        keypair: "{{ keypair }}"
        instance_type: "{{ type | default('t2.micro') }}"
-       vpc_subnet_id: "subnet-{{ vpc_subnet | default('d931e1e5') }}"
+       vpc_subnet_id: "subnet-{{ vpc_subnet | default('7199b32a') }}"
        image: "{{ ami }}"
        region: "{{ region }}"
        count: "{{ count }}"
