fixing playbooks to use ec2 dynamic hosts

--- a/jboss-standalone/deploy-application.yml
+++ b/jboss-standalone/deploy-application.yml
@@ -1,7 +1,8 @@
 ---
 # This playbook deploys two simple applications to JBoss server. 
-
-- hosts: all
+- name: Deploy web application
+  hosts: tag_type_app
+  become: true
 
   roles:
     - java-app-install
