--- a/jboss-standalone/undeploy-application.yml
+++ b/jboss-standalone/undeploy-application.yml
@@ -1,7 +1,8 @@
 ---
-# This playbook deploys two simple applications to JBoss server. 
-
-- hosts: all
+# This playbook un-deploys two Ticket Monster and Hello World applications to JBoss server. 
+- name: Remove web application
+  hosts: tag_type_app
+  become: true
 
   roles:
     - java-app-uninstall
