--- a/jboss-standalone/uninstall-jboss.yml
+++ b/jboss-standalone/uninstall-jboss.yml
@@ -1,7 +1,8 @@
 ---
 # This playbook removes a standalone JBoss server.
-
-- hosts: all
+- name: Remove JBoss Server
+  hosts: tag_type_app
+  become: true
 
   roles:
     - jboss-standalone-uninstall
