--- a/jboss-standalone/aws-build_vm.yml
+++ b/jboss-standalone/aws-build_vm.yml
@@ -9,7 +9,7 @@
     ami:      ami-9e0ea788
     keypair:  "{{ ec2_keypair_name | default('redhat demo') }}"
     set_dns:  False
-    count:    1
+    count:    "{{ vm_count}}"
     tags:
       env:  "{{ tags_env  | default('prod') }}"
       type: "{{ tags_type | default('app') }}"
