--- a/jboss-standalone/aws-build_emergency_instance.yml
+++ b/jboss-standalone/aws-build_emergency_instance.yml
@@ -41,7 +41,7 @@
       with_items: "{{ ec2.instances }}"
     - name: associate an elastic IP with an instance
       ec2_eip:
-        device_id: "{{ item.id }}"
+        device_id: "{{ ec2.instances }}"
         ip: 34.192.32.6
  
     - name: Instance info
