added region variable to make ec2_eip work

--- a/jboss-standalone/aws-build_emergency_instance.yml
+++ b/jboss-standalone/aws-build_emergency_instance.yml
@@ -42,6 +42,7 @@
     - name: associate an elastic IP with an instance
       ec2_eip:
         device_id: "{{ ec2.instances }}"
+        region: "{{ region }}"
         ip: 34.192.32.6
  
     - name: Instance info
