--- a/jboss-standalone/aws-build_emergency_instance.yml
+++ b/jboss-standalone/aws-build_emergency_instance.yml
@@ -39,11 +39,13 @@
         timeout: 320
         state: started
       with_items: "{{ ec2.instances }}"
+
     - name: associate an elastic IP with an instance
       ec2_eip:
-        device_id: "{{ ec2.id }}"
+        device_id: "{{ item.id }}"
         region: "{{ region }}"
         ip: 34.192.32.6
+      with_items: "{{ ec2.instances }}"
  
     - name: Instance info
       debug:
