--- a/jboss-standalone/aws-build_emergency_instance.yml
+++ b/jboss-standalone/aws-build_emergency_instance.yml
@@ -49,5 +49,5 @@
  
     - name: Instance info
       debug:
-        msg: "{{ item.id }} {{ item.public_ip }} {{ eip.public_ip }}"
+        msg: "{{ item.id }} {{ item.public_ip }}"
       with_items: "{{ ec2.instances }}"
