fixing syntax, maybe

--- a/compliance/copy_bad_hosts.yml
+++ b/compliance/copy_bad_hosts.yml
@@ -5,10 +5,12 @@
   connection: local
 
   tasks:
-  - copy:
-    src: /var/lib/awx/public/files/bad_hosts
-    dest: /etc/hosts
-    owner: root
-    group: root
-    mode: 0644
-    backup: yes
+    - name: Copying intentionally bad file
+      copy:
+        src: /var/lib/awx/public/files/bad_hosts
+        dest: /etc/hosts
+        owner: root
+        group: root
+        mode: 0644
+        backup: yes
+
