--- a/compliance/copy_good_hosts.yml
+++ b/compliance/copy_good_hosts.yml
@@ -1,6 +1,7 @@
 ---
 - name: Copy a good version of the hosts file to a server
   gather_facts: false
+  hosts: localhost
   connection: local
 
   tasks:
