--- a/compliance/copy_bad_hosts.yml
+++ b/compliance/copy_bad_hosts.yml
@@ -1,7 +1,7 @@
 ---
 - name: Copy a bad version of the hosts file to a server
   gather_facts: false
-  hosts: Azure Central US
+  hosts: localhost
   connection: local
 
   tasks:
