--- a/compliance/copy_bad_hosts.yml
+++ b/compliance/copy_bad_hosts.yml
@@ -1,8 +1,7 @@
 ---
 - name: Copy a bad version of the hosts file to a server
   gather_facts: false
-  hosts: localhost
-  connection: local
+  hosts: 52.176.58.46
 
   tasks:
     - name: Copying intentionally bad file
